--- a/batch_layer_norm.ipynb
+++ b/batch_layer_norm.ipynb
@@ -305,23 +305,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "array([[[ 0.99998   , -0.99998   ],\n",
+       "        [ 0.99999778, -0.99999778],\n",
+       "        [-0.999995  ,  0.999995  ]],\n",
+       "\n",
+       "       [[ 0.999995  , -0.999995  ],\n",
+       "        [ 0.999995  , -0.999995  ],\n",
+       "        [ 0.        ,  0.        ]]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.allclose(x_normalized, torch_normalized)"
+    "import numpy as np\n",
+    "\n",
+    "x = [[[7., 6.],\n",
+    "      [8., 5.],\n",
+    "      [1., 3.]],\n",
+    "\n",
+    "     [[8., 6.],\n",
+    "      [5., 3.],\n",
+    "      [5., 5.]]]\n",
+    "\n",
+    "means = np.mean(x, axis=2, keepdims=True) \n",
+    "vars = np.var(x, axis=2, keepdims=True) \n",
+    "\n",
+    "y_nonscaled = (x - means) / (np.sqrt(vars + 1e-5))\n",
+    "y_nonscaled"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all equal!\n"
+     ]
+    }
+   ],
+   "source": [
+    "assert torch.allclose(x_normalized, torch_normalized)\n",
+    "assert torch.allclose(torch.tensor(y_nonscaled, dtype=torch.float), torch_normalized)\n",
+    "print('all equal!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
